# Kin-News-Core

./: .gitignore  readme.md
kin_news_core/: settings.py  (+6 more)
src/: pyproject.toml
src/kin_news_core/: constants.py  service_proxy.py  settings.py
src/kin_news_core/auth/: jwt.py
src/kin_news_core/cache/: interfaces.py
src/kin_news_core/database/: driver.py
src/kin_news_core/datasources/: constants.py
src/kin_news_core/datasources/common/: entities.py
src/kin_news_core/datasources/telegram/: __init__.py  interfaces.py  utils.py
src/kin_news_core/messaging/: interfaces.py
src/kin_news_core/messaging/rabbit/: client.py  dtos.py  subscriber.py
src/kin_news_core/pagination/: __init__.py
src/kin_news_core/reports_building/: app.py  containers.py  tasks.py
src/kin_news_core/reports_building/events/: handlers.py
src/kin_txt_core/: exceptions.py  service_proxy.py  settings.py
src/kin_txt_core/auth/: jwt.py  kin_token.py
src/kin_txt_core/cache/: __init__.py  async_redis.py  interfaces.py  redis_cache.py
src/kin_txt_core/database/: __init__.py  driver.py
src/kin_txt_core/datasources/: constants.py  settings.py
src/kin_txt_core/datasources/common/: entities.py  interface.py
src/kin_txt_core/datasources/reddit/: __init__.py  client.py
src/kin_txt_core/datasources/telegram/: __init__.py  client.py  interfaces.py  retry.py
src/kin_txt_core/messaging/: interfaces.py
src/kin_txt_core/pagination/: entities.py
src/kin_txt_core/reports_building/: app.py  constants.py  containers.py  settings.py  tasks.py  types.py
src/kin_txt_core/types/: reports.py
(+132 files in other folders)
