[tool.poetry]
name = "kin-txt-core"
version = "0.1.0"
description = "Core logic for Kin-Txt services"
authors = ["kinfi4 <ilyamakarov223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pyjwt = "2.8.0"
pika = "1.3.2"
telethon = "1.29.3"
redis = "5.0.0"
aioredis = "2.0.1"
SQLAlchemy = "2.0.20"
pydantic = "1.10.4"
dependency-injector = "4.41.0"
celery = "5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
